core/main/default/objects/Settings__c/Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description
  >Settings for Manufacturing Cloud Connector for Sales</description>
    <label>Settings</label>
</CustomObject>