core/main/default/objects/Settings__c/fields/CpqEnabled__c.field-meta.xml
<CustomField>
    <fullName>CpqEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Check this box if you are using CPQ. If this is enabled, you must set the Quote Line Account and Sales Agreement Quote Fields in settings.</description>
    <inlineHelpText
  >Check this box if you are using CPQ. If this is enabled, you must set the Quote Line Account and Sales Agreement Quote Fields in settings.</inlineHelpText>
    <label>Enable CPQ</label>
    <type>Checkbox</type>
</CustomField>