core/main/default/objects/Settings__c/fields/MatchQliAccountToSaAccount__c.field-meta.xml
<CustomField>
    <fullName>MatchQliAccountToSaAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Only add Sales Agreement Products to Sales Agreements when the Quote Line&apos;s Account ID matches the Sales Agreement&apos;s Account ID (AccountId__c).</description>
    <inlineHelpText
  >Only add Sales Agreement Products to Sales Agreements when the Quote Line&apos;s Account ID matches the Sales Agreement&apos;s Account ID.</inlineHelpText>
    <label>Match QLI Account to SA Account</label>
    <type>Checkbox</type>
</CustomField>