core/main/default/objects/Settings__c/fields/MatchQliKeyToSaKey__c.field-meta.xml
<CustomField>
    <fullName>MatchQliKeyToSaKey__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Only add Sales Agreement Products to Sales Agreements when the Quote Line&apos;s SA Key matches the Sales Agreement&apos;s SA Key. Can be used with the Match QLI Account to SA Account setting.</description>
    <inlineHelpText
  >Only add Sales Agreement Products to Sales Agreements when the Quote Line&apos;s SA Key matches the Sales Agreement&apos;s SA Key. Can be used with the Match QLI Account to SA Account setting.</inlineHelpText>
    <label>Match QLI Key to SA Key</label>
    <type>Checkbox</type>
</CustomField>