core/main/default/objects/Settings__c/fields/QliToSapFieldMappingPlugin__c.field-meta.xml
<CustomField>
    <fullName>QliToSapFieldMappingPlugin__c</fullName>
    <description
  >Name of Apex Class that contains field mappings from quote lines to sales agreement products. Class must implement the FieldMappingConfiguration interface.</description>
    <inlineHelpText
  >Name of Apex Class that contains field mappings from quote lines to sales agreement products. Class must implement the FieldMappingConfiguration interface.</inlineHelpText>
    <label>QLI to SAP Field Mapping Plugin</label>
    <length>40</length>
    <type>Text</type>
</CustomField>