core/main/default/objects/Settings__c/fields/QuoteLineAccountField__c.field-meta.xml
<CustomField>
    <fullName>QuoteLineAccountField__c</fullName>
    <defaultValue>&quot;AccountId__c&quot;</defaultValue>
    <description
  >The API name of the field on either the Quote Line (CPQ) or Quote Line Item (Standard) objects that references the Account. Used with the Match QLI Account to SA Account setting to convert quote lines to Sales Agreements with a matching Account. Default values is AccountId__c.</description>
    <inlineHelpText
  >The API name of the field on either the Quote Line (CPQ) or Quote Line Item (Standard) objects that references the Account. Used with the Match QLI Account to SA Account setting to convert quote lines to Sales Agreements with a matching Account. Default values is AccountId__c.</inlineHelpText>
    <label>Quote Line Account Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>