core/main/default/objects/Settings__c/fields/SaAccountFieldApiName__c.field-meta.xml
<CustomField>
    <fullName>SaAccountFieldApiName__c</fullName>
    <description
  >Specify which field should be used when matching the quote line&apos;s account to its corresponding Sales Agreement. AccountId will be used if blank.</description>
    <inlineHelpText
  >Specify which field should be used when matching the quote line&apos;s account to its corresponding Sales Agreement. AccountId will be used if blank.</inlineHelpText>
    <label>Sales Agreement Account Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>