core/main/default/objects/Settings__c/fields/SalesAgreementQuoteField__c.field-meta.xml
<CustomField>
    <fullName>SalesAgreementQuoteField__c</fullName>
    <defaultValue>&quot;Quote__c&quot;</defaultValue>
    <description
  >The API Name of the field on the Sales Agreement that references the Quote used to create this Sales Agreement. Must be a reference to a Standard or CPQ Quote. Default field is Quote__c.</description>
    <inlineHelpText
  >The API Name of the field on the Sales Agreement that references the Quote used to create this Sales Agreement. Must be a reference to a Standard or CPQ Quote. Default field is Quote__c.</inlineHelpText>
    <label>Sales Agreement Quote Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>